# custom-try.rs

./: Cargo.toml  README.md
.github/workflows/: CI.yml  future-proof.yml
src/: _lib.rs  compile_fail_tests.md
src/proc_macros/: Cargo.toml  _mod.rs  args.rs  visitor.rs
tests/: main.rs
