# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[lib]
path = "src/_lib.rs"

[package]
name = "custom-try"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
version = "0.1.0-rc1"  # Keep in sync
edition = "2021"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/custom-try.rs"
documentation = "https://docs.rs/custom-try"
readme = "README.md"

description = "Macro to customize the behavior of `?`"
# keywords = []

[features]
better-docs = []  # allowed to break MSRV
ui-tests = ["better-docs"]

[dependencies]

[dependencies.custom-try-proc_macros]
path = "src/proc_macros"
version = "0.1.0-rc1"  # Keep in sync

[dev-dependencies]

[workspace]
members = [
    "src/proc_macros",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    # Use (with or without `open`):
    # ```md
    # <details open class="custom"><summary><span class="summary-box"><span>Click to hide</span></span></summary>
    # …
    # </details>
    # ```
    # to get nice drop-down menus (and avoid the css bug with rustdoc).
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
